--- a/core-library/tokens/global/_selected.scss
+++ b/core-library/tokens/global/_selected.scss
@@ -13,37 +13,43 @@
 
 @mixin tokens($palette: focus) {
     @include theme.light() {
+        @include device.if-hover {
+            --navigation-hover: #{color.mix-token($palette, 800)};
+            --navigation-weak-hover: #{color.mix-token($palette, 200)};
+            --formcontrol-hover: #{color.mix-token($palette, 800)};
+            --formcontrol-weak-hover: #{color.mix-token($palette, 200)};
+        }
+
         --navigation: #{color.mix-token($palette, 700)};
-        --navigation-hover: #{color.mix-token($palette, 800)};
         --navigation-active: #{color.mix-token($palette, 900)};
         --navigation-weak: #{color.mix-token($palette, 100)};
-        --navigation-weak-hover: #{color.mix-token($palette, 200)};
         --navigation-weak-active: #{color.mix-token($palette, 300)};
         --navigation-disabled: #{color.mix-token($palette, 300)};
         --formcontrol: #{color.mix-token($palette, 700)};
-        --formcontrol-hover: #{color.mix-token($palette, 800)};
         --formcontrol-active: #{color.mix-token($palette, 900)};
         --formcontrol-disabled: #{color.mix-token($palette, 300)};
         --formcontrol-weak: #{color.mix-token($palette, 100)};
-        --formcontrol-weak-hover: #{color.mix-token($palette, 200)};
         --formcontrol-weak-active: #{color.mix-token($palette, 300)};
         --text-disabled: #{color.mix-token($palette, 100)};
     }
 
     @include theme.dark() {
+        @include device.if-hover {
+            --navigation-hover: #{color.mix-token($palette, 500)};
+            --navigation-weak-hover: #{color.mix-token($palette,1100)};
+            --formcontrol-hover: #{color.mix-token($palette, 500)};
+            --formcontrol-weak-hover: #{color.mix-token($palette, 1100)};
+        }
+
         --navigation: #{color.mix-token($palette, 600)};
-        --navigation-hover: #{color.mix-token($palette, 500)};
         --navigation-active: #{color.mix-token($palette, 400)};
         --navigation-weak: #{color.mix-token($palette, 1200)};
-        --navigation-weak-hover: #{color.mix-token($palette,1100)};
         --navigation-weak-active: #{color.mix-token($palette, 1000)};
         --navigation-disabled: #{color.mix-token($palette, 1000)};
         --formcontrol: #{color.mix-token($palette, 600)};
-        --formcontrol-hover: #{color.mix-token($palette, 500)};
         --formcontrol-active: #{color.mix-token($palette, 400)};
         --formcontrol-disabled: #{color.mix-token($palette, 1000)};
         --formcontrol-weak: #{color.mix-token($palette, 1200)};
-        --formcontrol-weak-hover: #{color.mix-token($palette, 1100)};
         --formcontrol-weak-active: #{color.mix-token($palette, 1000)};
         --text-disabled: #{color.mix-token($palette, 1200)};
     }
